Fixed contrast issues and such

--- a/css/styles.css
+++ b/css/styles.css
@@ -335,7 +335,7 @@ header {
 header span {
   font-size: 1.6rem;
   font-weight: 300;
-  color: #0089cd;
+  color: #005885;
 }
 header p {
   margin: 0;
@@ -385,7 +385,7 @@ nav ul {
   display: none;
 }
 nav ul li a {
-  color: #0089cd;
+  color: #005885;
   display: block;
   padding: 0.75rem 10px;
   text-decoration: none;
@@ -464,7 +464,7 @@ main p {
 }
 
 .flip-card-back {
-  background-color: #0089cd;
+  background-color: #005885;
   color: white;
   transform: rotateY(180deg);
 }
@@ -490,7 +490,7 @@ main p {
 
 /* --------------------------- FOOTER --------------------------- */
 #footerWrapper {
-  background-color: #0089cd;
+  background-color: #005885;
 }
 
 footer {
@@ -520,7 +520,7 @@ footer a {
     transition: background 0.3s linear;
   }
   nav ul li a:hover {
-    background-color: #0089cd;
+    background-color: #005885;
     color: white;
   }
 }
